use Levels to change Enchantments